--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,4 @@
 <div class="d-flex">
   <app-sidebar></app-sidebar>
-
-  <div class="container">
-    <div class="row p-3">
-      <div class="col">
-        <h5>Buscar:</h5>
-        <input type="text" class="form-control" placeholder="Buscar gifs...">
-      </div>
-    </div>
-    <hr />
-    <div class="row">
-      <div class="col">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae in ratione dignissimos fuga, odio corrupti,
-        voluptatum debitis provident ad ex dolor eligendi quia alias voluptates eum, modi nesciunt molestiae placeat.
-      </div>
-    </div>
-  </div>
+  <app-gifs-page class="container"></app-gifs-page>
 </div>
