--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,7 +2,8 @@
     <h3 class="text-light">Gifs-app</h3>
     <hr class="text-white" />
     <div class="list-group list-reset">
-        <a *ngFor="let item of historial" href="#" class="list-group-item list-group-item-action">
+        <a *ngFor="let item of historial" href="#" class="list-group-item list-group-item-action" 
+           (click)="buscar(item)">
             {{item | titlecase}}
         </a>
     </div>
